# squrl

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  SECRETS_MANAGER_INTEGRATION.md  cf.yaml  docker-compose.yml  high-scale-suggestions.md  justfile  milestone-02.md  milestone-2-test-report.md  milestone-2.5.md  privacy-plan.md  roadmap.md  security-plan.md  squrl  urls.db
Squrl.popclipext/: Config.yaml
docs/: milestone-01.md  milestone-2-test-report.md  milestone-2.5.md  monitoring-simplification.md  privacy-plan.md  roadmap.md  squrl-technical-article-concise.md  squrl-technical-article.md  technical-article-part1.md  technical-article-part2.md  technical-article.md
just/: build.just  deployment.just  development.just  testing.just  utilities.just  validation.just
lambda/analytics/: Cargo.toml
lambda/analytics/src/: main.rs
lambda/create-url/: Cargo.toml
lambda/create-url/src/: main.rs
lambda/get-stats/: Cargo.toml
lambda/get-stats/src/: main.rs
lambda/redirect/: Cargo.toml
lambda/redirect/src/: main.rs
popclip-extension/: README.md  squrl.popclipextz
popclip-extension/squrl.popclipext/: Config.yaml  squrl.js
scripts/: clear-staging-db.sh  deploy-staging  lambda-build-tests.sh  rust-tests.sh  setup-local-dynamodb.sh  terraform-plan.sh  terraform-validate.sh  test_expiration.sh
shared/: Cargo.toml
shared/src/: base62.rs  dynamodb.rs  error.rs  lib.rs  mod.rs  models.rs  secrets.rs  validation.rs
src/: local_dev_server.rs  main.rs
terraform/: SECURITY-INTEGRATION-NOTES.md
terraform/environments/: README.md
terraform/environments/dev/: main.tf  monitoring.tf  outputs.tf  secrets.auto.tfvars.example  terraform.tfvars  tfplan  variables.tf
terraform/environments/prod/: main.tf  monitoring.tf  outputs.tf  secrets.auto.tfvars.example  terraform.tfvars  variables.tf
terraform/modules/api-gateway-waf/: README.md  example.tf  main.tf  outputs.tf  variables.tf
terraform/modules/api_gateway/: README.md  example.tf  main.tf  methods.tf  outputs.tf  rate_limiting.tf  stages.tf  validators.tf  variables.tf
terraform/modules/cloudfront/: README.md  cache_policies.tf  examples.tf  main.tf  origin_request_policies.tf  outputs.tf  response_headers_policy.tf  variables.tf  waf_rules.tf
terraform/modules/dynamodb/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/kms/: README.md  example-usage.md  main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: PRIVACY_COMPLIANT_README.md  README.md  abuse_detection.tf  alarms.tf  dashboards.tf  log_groups.tf  main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/templates/: abuse_processor.py  abuse_response_handler.py  anonymous_pattern_analyzer.py  ip_reputation_checker.py  privacy_compliant_analytics.py  realtime_abuse_detector.py
terraform/modules/parameter-store/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/s3-static-hosting/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/secrets-manager/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/vpc-endpoints/: README.md  main.tf  outputs.tf  variables.tf
tests/: .gitignore  README.md
tests/integration/: Cargo.toml
tests/integration/src/: api_tests.rs  caching_tests.rs  lib.rs  rate_limit_tests.rs
tests/load/: README.md  artillery-config.yml  burst-test.yml  mixed-workload.yml  package.json  test-functions.js  waf-limit-test.yml
web-ui/: error.html  index.html  local-dev.html
