[workspace]
members = [
    "shared",
    "lambda/create-url",
    "lambda/redirect",
    "lambda/get-stats",
]
resolver = "2"

[workspace.dependencies]
# Lambda Runtime
lambda_runtime = "0.14.3"
lambda-web = "0.2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# AWS SDK
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.89.0"
aws_lambda_events = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP and URL handling
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# ID generation (collision-resistant)
nanoid = "0.4"
uuid = { version = "1.0", features = ["v4", "v7"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.0"
lazy_static = "1.4"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
