[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = { workspace = true }
tokio = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = { workspace = true }

squrl-shared = { path = "../../shared" }

[dev-dependencies]
tokio-test = "0.4"