[package]
name = "get-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = { workspace = true }
tokio = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

squrl-shared = { path = "../../shared" }