[package]
name = "squrl-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_tests"
path = "src/api_tests.rs"

[[bin]]
name = "rate_limit_tests"
path = "src/rate_limit_tests.rs"

[[bin]]
name = "caching_tests"
path = "src/caching_tests.rs"

[dependencies]
# Core testing framework
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# HTTP client and utilities
reqwest = { version = "0.11", features = ["json", "cookies"] }
http = "0.2"
url = "2.4"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Assertions and testing
assert_matches = "1.5"
pretty_assertions = "1.4"

# Logging for test debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Test configuration
config = "0.13"
dotenvy = "0.15"

# Rate limiting test utilities
governor = "0.6"
instant = "0.1"

# AWS SDK for integration tests (optional)
aws-config = { version = "1.0", optional = true }
aws-sdk-cloudwatch = { version = "1.0", optional = true }
aws-sdk-apigateway = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
aws-integration = ["aws-config", "aws-sdk-cloudwatch", "aws-sdk-apigateway"]

[[bench]]
name = "load_benchmarks"
harness = false